<resources>
    <string name="app_name">Cryptospot</string>
    <string name="title_email">Email</string>
    <string name="hint_email">Input your email</string>
    <string name="title_password">Password</string>
    <string name="hint_password">Input your password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="not_registered">Don\'t have an account? Sign up here</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_home">Home</string>
    <string name="text_favorite">Faforite</string>
    <string name="text_profile">Profile</string>
    <string name="text_greetings">Welcome Komang,</string>
    <string name="text_sub_greetings">Make your first investment today</string>
    <string name="text_btn_invest_today">Invest Today</string>
    <string name="text_trending_coins">Trending Coins</string>
    <string name="text_coin_name">Bitcoin</string>
    <string name="text_coin_symbol">btc</string>
    <string name="text_coin_price">$7676.87</string>
    <string name="text_coins_on_empty">Coins empty!</string>
    <string name="text_on_error">Error!</string>

    <!-- Profile-->
    <string name="text_profile_username">Tony Stark</string>
    <string name="text_profile_email">Newuser420@gmail.com</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_logout">Logout</string>

    <!-- Update Profile -->
    <string name="text_hint_username">Username</string>
    <string name="text_hint_email">Email</string>
    <string name="text_save_edit">Save Edit</string>
    <string name="text_req_change_pass">Request Change Password by Email</string>
    <string name="text_change_profile_data_success">Change Profile Data Success</string>
    <string name="text_change_profile_data_failed">Change Profile Data Failed</string>

    <!--Register-->
    <string name="register">Register</string>
    <string name="already_have_an_account_login_here">Already have an Account? Login Here</string>
    <string name="your_name">Your name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="text_highlight_login_here"> Login Here</string>
    <string name="text_register_success">Anda Telah Terdaftar\nSilahkan Login</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>


    <string name="highlight_sign_up">Sign up here</string>
    <string name="login_failed">Login Gagal %1$s</string>
    <string name="proceed_login">proceedLogin %1$s</string>
    <string name="error_email_invalid">Input your email according to the format</string>
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_password_less_than_8_char">Password can\'t be less than 8 characters</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email">Input your email</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error: %1$s</string>
    <string name="create_email_input_dialog">createEmailInputDialog: %1$s</string>
    <string name="dialog_req_update_password">Password change request has been sent to your email</string>
    <string name="ok">OK</string>
    <string name="password_is_incorrect">Password is incorrect</string>
    <string name="text_user_not_login">you are not logged in yet!</string>
    <string name="text_display_name">Welcome</string>
    <string name="text_greetings_name">Welcome %1$s,</string>
    <string name="text_idr">IDR</string>
    <string name="text_usd">USD</string>
    <string name="text_open_in_coingecko">Open in CoinGecko</string>
    <string name="text_coin_id">bitcoin</string>
    <string name="text_favorite_title">Your Favorite</string>

</resources>