<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_coin_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageViewCircle"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_coin_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/font_open_sans_medium"
            android:maxLines="1"
            android:text="@string/text_coin_name"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tv_coin_price"
            app:layout_constraintStart_toEndOf="@id/iv_coin_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_coin_symbols"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/text_coin_symbol"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/tv_coin_price"
            app:layout_constraintStart_toEndOf="@id/iv_coin_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_coin_name" />

        <TextView
            android:id="@+id/tv_coin_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_coin_price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/font_open_sans_medium"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/tv_coin_name"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
