<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#B3000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog">

        <TextView
            android:id="@+id/tv_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_edit_profile"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/btn_back"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            tools:src="@tools:sample/avatars"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageViewCircle" />

        <FrameLayout
            android:id="@+id/btn_edit_photo_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/iv_profile"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile"
            android:background="@drawable/bg_container"
            android:padding="4dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_edit"/>

        </FrameLayout>

        <include
            android:id="@+id/layout_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/layout_form_edit_profile"
            app:layout_constraintTop_toBottomOf="@id/iv_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"/>

        <LinearLayout
            android:id="@+id/btn_save_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_button_solid"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toBottomOf="@id/layout_form"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_save_edit"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/md_theme_onPrimary"/>

        </LinearLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/btn_save_edit"
            app:layout_constraintBottom_toBottomOf="@id/btn_save_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/btn_req_change_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_save_edit">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_req_change_pass"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textColor="@color/md_theme_primary"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>